# game-of-life

./: .gitignore  CMakeLists.txt
include/: Game_Board.h
src/: Game_Board.cpp  main.cpp
